--- a/frontend/languages/css/box-model/exercise.html
+++ b/frontend/languages/css/box-model/exercise.html
@@ -28,21 +28,55 @@
         }
 
         #triangle{
-            background-color: green;
-            width: 200px;
-            height: 200px;
-            border-top-right-radius: 500px;
-            border-top-left-radius: 0px;
-            border-bottom-right-radius: 0px;
-            border-bottom-left-radius: 10px;
+            width: 0;
+            height: 0;
+            border-left: 25px solid transparent;
+            border-right: 25px solid transparent;
+            border-bottom: 50px solid grey;            
         }
+        #oval{
+            background-color:green;
+            width: 100px;
+            height: 50px;
+            border-radius:60%
+        }
+        #rhombus{
+            background-color: green;
+            width: 100px;
+            height: 100px;
+            transform: rotate(45deg);
+            margin-left: 50px;
+        }
+        #heart{
+            background-color: grey;
+        }
+        #heartleftcircle{
+            background-color: red;
+            width:20px;
+            height:20px;
+            border-radius:50%
+        }
+        #heartrightcircle{
+            background-color: red;
+            width: 20px;
+            height: 20px;
+            border-radius: 50%;
+        }
+
     </style>
 </head>
 <body>
     
         <div id="square"></div><br>
         <div id="circle"></div>
-        <div id="teardrop"></div>
-        <div id="triangle"></div>
+        <div id="teardrop"></div><br>
+        <div id="triangle"></div><br>
+        <div id="oval"></div><br>
+        <div id="rhombus"></div><br><br>
+        <div id="heart">
+            <div id="heartleftcircle"></div>
+            <div id="heartrightcircle"></div>
+        </div>
+        frontend/languages/css/selectors
 </body>
 </html>
